<resources>
    <string name="app_name">News App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="favorite">Favorite</string>
    <string name="favorite_news_not_found">Favorite news not found!</string>
    <string name="dogecoin_to_the_moon">Dogecoin to the Moon...</string>
    <string name="latest_news">Latest News</string>
    <string name="see_all">See All</string>
    <string name="hot_updates">Hot Updates</string>
    <string name="follow">Follow</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="search">Search...</string>
    <string name="covid_new_variant">Covid New Variant</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="sort_by">Sort By</string>
    <string name="following">Following</string>
    <string name="latest">Latest</string>
    <string name="most_viewed">Most Viewed</string>
    <string name="save">SAVE</string>
    <string name="home">Home</string>

    <string-array name="category_list">
        <item>Healthy</item>
        <item>Technology</item>
        <item>Finance</item>
        <item>Arts</item>
        <item>Sports</item>
    </string-array>

</resources>