<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/top_corners">

    <ImageView
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.25"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/filter_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_bold"
        android:paddingVertical="20dp"
        android:text="@string/filter"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line" />

    <TextView
        android:id="@+id/reset_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_back"
        android:drawablePadding="10dp"
        android:fontFamily="@font/nunito_regular"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/reset"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/filter_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/filter_tv"
        app:drawableLeftCompat="@drawable/ic_trash" />

    <TextView
        android:id="@+id/sort_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/sort_by"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_tv" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/sort_tv"
        app:layout_constraintTop_toBottomOf="@id/sort_tv">


        <CheckBox
            android:id="@+id/follow_chb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:background="@drawable/checkbox_selector"
            android:button="@null"
            android:paddingHorizontal="16dp"
            android:text="@string/following"
            android:textColor="@color/checkbox_text_color"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/latest_chb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:background="@drawable/checkbox_selector"
            android:button="@null"
            android:paddingHorizontal="20dp"
            android:text="@string/latest"
            android:textColor="@color/checkbox_text_color"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/most_chb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:background="@drawable/checkbox_selector"
            android:button="@null"
            android:paddingHorizontal="10dp"
            android:text="@string/most_viewed"
            android:textColor="@color/checkbox_text_color"
            android:textSize="12sp" />


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/save_card"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        app:cardBackgroundColor="@color/primary"
        app:cardCornerRadius="24dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear1"
        app:layout_constraintWidth_percent="0.9">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/nunito_extrabold"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>