<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <TextView
            android:id="@+id/search_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/edittext_back"
            android:hint="@string/dogecoin_to_the_moon"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.01"
            app:layout_constraintWidth_percent="0.8"
            app:drawableEndCompat="@drawable/ic_search" />

        <androidx.cardview.widget.CardView
            android:id="@+id/bell_card"
            android:layout_width="36dp"
            android:layout_height="36dp"
            app:cardBackgroundColor="@color/primary"
            app:cardCornerRadius="18dp"
            app:layout_constraintBottom_toBottomOf="@id/search_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/search_tv"
            app:layout_constraintTop_toTopOf="@id/search_tv">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="9dp"
                    android:src="@drawable/ic_bell"
                    tools:ignore="ContentDescription" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/noti_card"
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:visibility="gone"
                    app:cardBackgroundColor="@color/tertiary"
                    app:cardCornerRadius="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.65"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.25" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/latest_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:text="@string/latest_news"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/search_tv"
            app:layout_constraintTop_toBottomOf="@id/search_tv" />

        <TextView
            android:id="@+id/see_all_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:fontFamily="sans-serif-thin"
            android:padding="4dp"
            android:text="@string/see_all"
            android:textColor="@color/secondary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/latest_tv"
            app:layout_constraintEnd_toEndOf="@id/bell_card"
            app:layout_constraintTop_toTopOf="@id/latest_tv"
            app:drawableRightCompat="@drawable/ic_arrow_right" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="14dp"
            android:visibility="gone"
            app:layout_constraintDimensionRatio="1.8:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/latest_tv" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tablayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/view_pager"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp"
            app:tabMode="scrollable"
            app:tabPaddingEnd="6dp"
            app:tabPaddingStart="8dp"
            app:tabTextColor="@color/black" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="140dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/tablayout"
            tools:listitem="@layout/item_news" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_view_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tablayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/item_shimmer" />

                <include layout="@layout/item_shimmer" />

                <include layout="@layout/item_shimmer" />

                <include layout="@layout/item_shimmer" />

                <include layout="@layout/item_shimmer" />

                <include layout="@layout/item_shimmer" />


            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>